--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <description>物流管理系统</description>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
 
