--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,7 @@ mybatis:
   configuration:
     # 配置日志在控制台显示sql语句
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+server:
+  #  端口号
+  port: 8099
